@@ -23,7 +23,7 @@
 int g_fdfs_connect_timeout = DEFAULT_CONNECT_TIMEOUT;
 int g_fdfs_network_timeout = DEFAULT_NETWORK_TIMEOUT;
 char g_fdfs_base_path[MAX_PATH_SIZE] = {'/', 't', 'm', 'p', '\0'};
-Version g_fdfs_version = {3, 8};
+Version g_fdfs_version = {3, 9};
 
 /*
 data filename format:
